# data-modelling-api

./: .gitignore  .pre-commit-config.yaml  .pre-commit-helper.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  DOCKER_BUILD.md  Dockerfile  LLM.txt  MISSING_IMPLEMENTATIONS.md  QUICKSTART.md  README.md  SQLX_METADATA_NOTE.md  build.sh  docker-compose.yml  openapi.json  pyproject.toml
.cargo/: audit.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml  publish.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.sqlx/: README.md  query-0453113a2875d55b215fb9ace99b6336d4b3ea877b0ffc30a55df0cbecccbe61.json  query-05f559a46b77413a5a8059052b71c19aea43c68b90938438adb8e9681c98f624.json  query-0c032bcffb4f7a044a94ac2b1567f57f9c8b9728844ba956dbfc5c94283b560f.json  query-0c9d54290883ca644b9d349ebce37dead9f81bfbb4deb4770503d5b2526cebc2.json  query-0e817d2ff814b802bdc08c3ae70386c6fb3bc011a96d91d80562e04caabf4cc5.json  query-0eb19fc61e483ba0b1eb4f7bebaad04bc9644d92c7bd6f2878c03bfd9dfa8f17.json  query-0eea3c7b9c7d3d5093a3532d39c2f4819ea8ebf8cc8da40b6ae3f6d03806b8d7.json  query-1303fdf7b2c4c133a09fc85b8bd1ab63ceec6f67df8ca60a614a489d16169635.json  query-13b18d95894f4f4c12c2f5f9aea4cc6022449ccc1048c9ecebe091bc974a08ef.json  query-147de21ec457ffab0c2fba859fec4d65a660cffa42f4f0558bcb77144194d3a7.json  query-187d4bf012d7d7d9903255dcc07f998fd225e420fe529dba57c16647bb2069bc.json  query-2368e74d9d5310139c43b8da4257fbf9a0711e5b0fa7b5cb6478231a25e78ff8.json  query-26de3ff28387942853ce0f72c205dc3845f62d3c3137432c0886bbeaf62e3368.json  query-26e09dbc471a84120cb8592f35cc662246ec0dc505671c4d1db9f0e884ac3c6c.json  query-29133e088f050ecd74c637bd32b13bf0b2c27c7fab25b4c3a17903aadf7a195f.json  query-29634006d089126d6b8b9a363a3079d238485013e0dacb4db332705ce9890fc8.json  query-29ea035f5a1d129bfa218403d9a4ed43b05748f60a2c4ce0967c12b9c1c90d1c.json  query-2a8a01088149f21af3ec2fbd277ad1a3514f94a0144bec831f126814297fb7ab.json  query-2d900d78a1abe9fae4d145dafe93e805786e226089137f29bcb612dbaee1cca1.json  query-39a9f6baed53ffc199d3769664967b77c62a3c25172e02cb51ad2480b302f743.json  query-406642369af94ab2e368581267b6ef122685a61a438bb0f1a44b689a15b79aba.json  query-429d449b65f4b37a4cdc28ef5fd5d7e3cb23dda8ff60302fa8b3f530f39e0744.json  query-442f731b94c3102e4a6e3444962c97413fb59e3a33fbafe1bdde2e3f3a764f25.json  query-4d8ed3659f6c7037106d634bc382609ac68edecb003cf8cf25b714a892346278.json  query-57d96273f424d0c748dc467d52bc822e6f3d56e6a6d1ef9fa2e1bce21cd28a34.json  query-5e417a171e5eab912d424c16bd916e328787888071151aa597313731a157b223.json  query-5fe3ac6a76e9fdb0724e3d6b278ecbd72d0894f3b8aa74f88d3b502e4d2a730f.json  query-64f8676002d72729a0822fafb790c8844b548037bf977ac90c93f31eb7d86b60.json  query-6932ebe78982330b64582a5401c3905ebd6f71fb423b88da844dd308c3385ece.json  query-6ac23dec79f75b01b5cee4d5ee8cb981e498212c95cf9029af59d7221d606958.json  query-6d37ec8a4d880a5d89d9ba21a3fb56a47880bc01dee2ecdee2c1f83e02164ed5.json  query-73dfae86a736946087f77d48fecd29cf94af0ab30223723ff1f5206600864f88.json  query-743a0ccfa39495bf6a2440deeaad0e15c0a0d72c461b50b555636e95fe2e460a.json  query-798838f2f5aea0c45bec540519961742a19954be79289a376e346d190a0dbae2.json  query-799d2ce4e98ae4094c458133e60c3a00c295ce79b697f58c254252632a173a31.json  query-7cc88817015bcc096465d7d53f8d18a6beb78f9e6bc2c60bcfb12cc546a37cac.json  query-8b452451f4aae112a4604a425e3337229a91a117287875b43a9b2aab11e97f24.json  query-90313740524e5ef9d66f74fe4d3b3cfe34b6c3d7bb25583ef7c36a3718637653.json  query-9681817ee2d8fbb02477c6f152c1cd5cfbd2ce1bc4f330b0181398158a97a865.json  (+29 more)
migrations/: 20241231000001_create_workspaces_table.sql  20241231000002_create_domains_table.sql  20241231000003_create_tables_table.sql  20241231000004_create_relationships_table.sql  20241231000005_create_sessions_table.sql  20241231000006_create_collaboration_sessions_table.sql  20241231000007_create_collaboration_participants_table.sql  20241231000008_create_collaboration_requests_table.sql  20241231000009_create_audit_entries_table.sql  20241231000010_create_cross_domain_refs_table.sql  20250127000001_add_workspace_name_and_type.sql  20250128000001_create_data_flow_diagrams.sql
scripts/: prepare-sqlx.sh  setup-sqlx-offline.sh
specs/001-fix-missing-endpoints/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-missing-implementations/: plan.md  spec.md  tasks.md
specs/003-domain-scoped-migration/: endpoint-migration.md  plan.md  tasks.md
src/: lib.rs
src/api/: main.rs  mod.rs  openapi.rs
src/drawio/: builder.rs  document.rs  mod.rs  models.rs
src/export/: avro.rs  json_schema.rs  mod.rs  odcs.rs  png.rs  protobuf.rs  sql.rs
src/graph/: mod.rs
src/odcl/: mod.rs
src/sql_parser/: mod.rs
src/yaml_processor/: mod.rs
tests/: test_lib.rs
tests/integration/: test_ai_service_integration.rs  test_api_contracts.rs  test_api_endpoints.rs  test_basic_api.rs  test_comprehensive_imports.rs  test_drawio_export.rs  test_drawio_import.rs  test_drawio_modeling_levels.rs  test_drawio_position_storage.rs  test_drawio_routing_storage.rs  test_drawio_schema_preservation.rs  test_drawio_visual_properties.rs  test_export_individual_schemas.rs  test_multi_format_export.rs  test_objects_arrays_entity_data.rs  test_odcl_import.rs  test_odcs_phases.rs  test_odcs_phases_integration.rs  test_odcs_reference.rs  test_sql_import.rs  test_sql_tblproperties_parsing.rs  test_table_properties_saving.rs
tests/unit/: test_avro_export.rs  test_data_model.rs  test_drawio_builder.rs  test_json_schema_export.rs  test_odcl_parser.rs  test_odcs_exporter_phases.rs  (+6 more)
(+60 files in other folders)
