[package]
name = "data-modelling-api"
version = "1.0.1"
edition = "2024"
authors = ["Mark Olliver <mark@olliver.me.uk>"]
license = "MIT"
repository = "https://github.com/pixie79/data-modelling-api"
description = "Data Modelling API for open data modelling based around ODCS formats"

[lib]
name = "data_modelling_api"
crate-type = ["rlib"]

[[bin]]
name = "api"
path = "src/api/main.rs"


[dependencies]
# SDK - shared types and utilities
data-modelling-sdk = { version = "1.0.2", features = ["api-backend", "git"] }

# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "tokio", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
futures-util = "0.3"

# OpenAPI documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }

# Rate limiting
governor = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# DrawIO XML
quick-xml = { version = "0.31", features = ["serialize"] }

# Git operations - handled through SDK (no direct git2 dependency needed)

# Database - SQLite (legacy)
# Updated to be compatible with sqlx 0.8.1
rusqlite = { version = "0.32", features = ["bundled"] }

# Database - PostgreSQL with sqlx
# Note: Offline mode is enabled via SQLX_OFFLINE=true environment variable
# Generate metadata with: cargo sqlx prepare -- --all-features
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls", "cookies"], default-features = false }
urlencoding = "2.1"
url = "2.5"

# JWT authentication
jsonwebtoken = "9"

# Image processing
image = "0.24"
imageproc = "0.23"

# ZIP file support
zip = "0.6"

# SQL parsing
sqlparser = "0.53"
datafusion = { version = "45", default-features = false, features = [] }
regex = "1.10"

# YAML processing
yaml-rust = "0.4"
petgraph = "0.6"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"

# Observability - Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"

# Observability - OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.31"

[features]
default = []

[dev-dependencies]
# cargo-tarpaulin = "0.34"  # Temporarily disabled due to git2 version conflict with SDK
tempfile = "3.8"
axum-test = "18.3"
once_cell = "1.19"
serial_test = "3.0"

# Test targets
# Note: Only existing test files are listed here
# Additional tests can be added as needed
