[build-system]
requires = ["maturin>=1.7.0"]
build-backend = "maturin"

[project]
name = "data-modelling-api"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = []
strip = true
compatibility = "linux"
